--- a/index.html
+++ b/index.html
@@ -44,27 +44,30 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <h2 class="text-white js-scroll-trigger" href="#page-top"><strong>Junia</strong><span style="font-weight: 300">Marketing</span></h2>
+
          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
+
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
-            </li> -->
+            </li>
+             -->
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">About</a>
+            </li>
            <!--  <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#plans">Plans</a>
+              <a class="nav-link js-scroll-trigger" href="about.html">Expert</a>
             </li> -->
-            <li class="nav-item">
-              <a class="nav-link" href="#team">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#team">Expert</a>
-            </li>
             <li class="nav-item">
               <a class="mt-1 mb-1 nav-link badge badge-primary " href="mailto:info@juniamarketing.com">Contact Now</a>
             </li>
@@ -77,8 +80,8 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-heading mb-4"> Your Digital Marketing Expert</span> </div>
-          <div class="intro-lead-in"> We provide industry leading digital marketing products and services for small to medium size business.</div>
+          <div class="intro-heading mb-4">  Digital Marketing Experts </div>
+          <div class="intro-lead-in mb-4"> We believe in building a strong brand that delivers on a promise.</div>
 
          <!-- <div id="light">
             <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
@@ -92,12 +95,46 @@
             <a class="btn btn-secondary btn-md text-uppercase" href="#" onclick="lightbox_open();">Watch video</a>
           </div> -->
           
-          <div>
+          <div class="pt-4">
             <a class="start text-uppercase" href="mailto:info@juniamarketing.com?subject=Hi, I would like to know more&body=Let's schedule a chat. Contact me for times!">Start Here </a>
           </div>
         </div>
       </div>
     </header>
+
+       <!-- Clients --> 
+    <section class="py-5">
+      <div class="container">
+        <!-- <div class="row">
+            <div class="col-sm-12 text-center mb-5">
+                <h3>Clients</h3>
+            </div>
+        </div> -->
+        <div class="row">
+
+          <div class="col-md-3 col-sm-6">
+            <a href="#">
+              <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <a href="#">
+              <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <a href="#">
+              <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <a href="#">
+              <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <!-- <div class="description">
     <div class="container">
@@ -115,7 +152,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="col-lg-8 mx-auto text-center mb-5"> We believe in building a strong brand that delivers on a promise.</h2>
+            <h2 class="col-lg-8 mx-auto text-center mb-5"> Services We Offer</h2>
           </div>
         </div>
         <div class="row text-center">
@@ -181,12 +218,12 @@
 
 
 
-    <!-- Portfolio Grid -->
-  <!--   <section class="bg-light" id="portfolio">
+    <!-- Portfolio Grid 
+    <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="mb-2">Latest Client Projects</h2>
+            <h2 class="pb-4"> Client Projects</h2>
           </div>
         </div>
         <div class="row">
@@ -276,7 +313,7 @@
           </div>
         </div>
       </div>
-    </section>  -->
+    </section> -->
 
     <!-- About -->
    <!--  <section id="about">
@@ -428,7 +465,7 @@
   </div>
 </section> -->
 
-    <!-- Team -->
+    <!-- Team 
     <section class="text-center" id="team">
       <div class="container">
         <div class="row">
@@ -439,8 +476,8 @@
        
           <div class="col-sm-12">
             <div class="team-member">
-              <!-- <img class="mx-auto rounded-circle mb-2" src="img/team/2.jpg" alt=""> -->
-              <h3>Junia Marketing</h3>
+               <img class="mx-auto rounded-circle mb-2" src="img/team/2.jpg" alt=""> 
+                  <h3>Junia Marketing</h3>
               <p class="text-muted">Digital Business Services Experts</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
@@ -472,45 +509,29 @@
           </div>
         </div>
       </div>
-    </section> 
-
-    <!-- Clients 
-    <section class="py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
     </section> -->
+
+ 
 
     <!-- Contact -->
     <section id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="text-white">Any questions - answered! </h3>
+                   <div class="col-sm-12">
+            <div class="team-member">
+              <!-- <img class="mx-auto rounded-circle mb-2" src="img/team/2.jpg" alt=""> -->
+              <h3 class="text-white">Junia Marketing</h3>
+              <p class="text-white">Digital Business Service Experts</p>
+              <div class="col-lg-8 mx-auto text-center">
+                    <p class="large text-white mt-4">Located in Detroit MI and over 6 years of experience specializing in Marketing management for Ecommerce companies - building online presence and manage growth are our specialites. Our driving passion is brand presence, product marketing and online digital advertising.
+                    </p>
+              </div>
+            </div>
+          </div>
+            <h3 class="text-white pb-4">Any questions? </h3>
              <div class="m-4 intro-text">
-                <a class=" start text-uppercase" href="mailto:info@juniamarketing.com">Get Started Today</a>
+                <a class="start text-uppercase " href="mailto:info@juniamarketing.com">Get Started Today</a>
             </div>
           </div>
         </div>
@@ -523,28 +544,30 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <span class="copyright">Copyright &copy; Junia Marketing 2020</span>
-          </div>
-         <!--  <div class="col-md-4">
             <ul class="list-inline social-buttons">
+               <li class="list-inline-item">
+                  <a href="mailto:info@juniamarketing.com">
+                    <i class="far fa-envelope"></i>
+                  </a>
+                </li>
+               <li class="list-inline-item">
+                  <a href="tel:248-635-3029">
+                    <i class="fas fa-mobile-alt"></i>
+                  </a>
+                </li>
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
+                  <a href="https://www.linkedin.com/in/raul-ghiurau-3a8424183/">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
+                </li>
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
+                  <a href="https://raulghiurau.com/">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </li>
             </ul>
           </div> 
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
                 <a href="#">Privacy Policy</a>
@@ -554,6 +577,9 @@
               </li>
             </ul>
           </div> -->
+          <div class="col-md-12">
+            <span class="copyright">Copyright &copy; Junia Marketing 2020</span>
+          </div>
         </div>
       </div>
     </footer>
