--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
 
-      <title>Junia Marketing - Digital Marketing and Ecommerce Experts</title>
+      <title>Junia Marketing - Digital Marketing, Ecommerce Experts and Content Development</title>
 
       <!-- Bootstrap core CSS -->
       <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -80,8 +80,8 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-heading mb-4">  Digital Marketing Experts </div>
-          <div class="intro-lead-in mb-4"> We believe in building a strong brand that delivers on a promise.</div>
+          <!-- <div class="intro-heading mb-4"> Digital Marketing Experts </div> -->
+          <div class="intro-heading mb-4"> We believe in building a strong brand that delivers on a promise. </div>
 
          <!-- <div id="light">
             <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
@@ -524,7 +524,7 @@
               <h3 class="text-white">Junia Marketing</h3>
               <p class="text-white">Digital Business Service Experts</p>
               <div class="col-lg-8 mx-auto text-center">
-                    <p class="large text-white mt-4">Located in Detroit MI and over 6 years of experience specializing in Marketing management for Ecommerce companies - building online presence and manage growth are our specialites. Our driving passion is brand presence, product marketing and online digital advertising.
+                    <p class="large text-white mt-4">Located in Detroit MI specializing in Marketing management for Ecommerce companies - building online presence and manage growth are our specialites. Our driving passion is brand presence, product marketing and online digital advertising. Reach out to us today!
                     </p>
               </div>
             </div>
