adding pages and blog

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
-
-        </button>
+          </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
@@ -80,8 +79,8 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <!-- <div class="intro-heading mb-4"> Digital Marketing Experts </div> -->
-          <div class="intro-heading mb-4"> We believe in building a strong brand that delivers on a promise. </div>
+          <h2> Digital Marketing Experts </h2>
+          <div class="intro-heading mb-4"> We believe in building strong brands that deliver on a promise. </div>
 
          <!-- <div id="light">
             <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
