--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
     </header>
 
        <!-- Clients --> 
-    <section class="py-5">
+   <!-- <section class="py-5">
       <div class="container">
-        <!-- <div class="row">
+         <div class="row">
             <div class="col-sm-12 text-center mb-5">
                 <h3>Clients</h3>
             </div>
-        </div> -->
+        </div> 
         <div class="row">
 
           <div class="col-md-3 col-sm-6">
@@ -133,7 +133,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
   <!-- <div class="description">
     <div class="container">
@@ -146,74 +146,73 @@
     </div>
   </div> -->
 
-    <!-- Services -->
-    <section id="services">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="col-lg-8 mx-auto text-center mb-5"> Services We Offer</h2>
-          </div>
-        </div>
-        <div class="row text-center">
-          <div class="col-md-4 mb-4">
-            <span class="fa-stack fa-3x mb-2">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-            </span>
-            <h6 class="section-heading text-uppercase">E-Commerce</h6>
-            <p>We provide e-commerece for any small and medium size company web based service in a customizable packages.
-          </div>
-          
-          <div class="col-md-4 mb-4">
-            <span class="fa-stack fa-3x mb-2">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-            </span>
-            <h6 class="section-heading text-uppercase">Web Development</h6>
-            <p>Web development from the ground up. Showcase what your business is about. 
-          </div>
+  <!-- Services -->
+ <section id="services">
+  	<div class="container">
+  		<div class="row">
+  			<div class="col-lg-12 text-center">
+  				<h2 class="col-lg-8 mx-auto text-center mb-5"> Services We Offer</h2>
+  			</div>
+  		</div>
+  		<div class="row text-center">
+  			<div class="col-md-4 mb-4">
+  				<span class="fa-stack fa-3x mb-2">
+  					<i class="fas fa-circle fa-stack-2x text-primary"></i>
+  					<i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+  				</span>
+  				<h6 class="section-heading text-uppercase">E-Commerce</h6>
+  				<p>We provide e-commerece for any small and medium size company web based service in a customizable packages.
+  				</div>
 
-          <div class="col-md-4 mb-4">
-            <span class="fa-stack fa-3x mb-2">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-check-double fa-stack-1x fa-inverse"></i>
-            </span>
-            <h6 class="section-heading text-uppercase">Content Creation</h6>
-            <p>Content is king. Now more than ever its important you stand out as the expert.</p>
-          </div>
-        
-  
-          <div class="col-md-4 mb-4">
-            <span class="fa-stack fa-3x mb-2">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-            </span>
-            <h6 class="section-heading text-uppercase">Graphic Design</h6>
-            <p>Need that flyer? brochure? or billboard? We provide graphic design services of all shapes and sizes.
-          </div>
+  				<div class="col-md-4 mb-4">
+  					<span class="fa-stack fa-3x mb-2">
+  						<i class="fas fa-circle fa-stack-2x text-primary"></i>
+  						<i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+  					</span>
+  					<h6 class="section-heading text-uppercase">Web Development</h6>
+  					<p>Web development from the ground up. Showcase what your business is about. 
+  					</div>
 
-          <div class="col-md-4 mb-4">
-            <span class="fa-stack fa-3x mb-2">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-            </span>
-            <h6 class="section-heading text-uppercase">Video Production</h6>
-            <p> Our strong suite. We write, produce, direct, edit and publish your videos directly to your choice of avenues.</p>
-          </div>
+  					<div class="col-md-4 mb-4">
+  						<span class="fa-stack fa-3x mb-2">
+  							<i class="fas fa-circle fa-stack-2x text-primary"></i>
+  							<i class="fas fa-check-double fa-stack-1x fa-inverse"></i>
+  						</span>
+  						<h6 class="section-heading text-uppercase">Content Creation</h6>
+  						<p>Content is king. Now more than ever its important you stand out as the expert.</p>
+  					</div>
 
-          <div class="col-md-4 mb-4">
-            <span class="fa-stack fa-3x mb-2">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-ad fa-stack-1x fa-inverse"></i>
-            </span>
-            <h6 class="section-heading text-uppercase">PPC Ads</h6>
-            <p>Get #1 on Google or advertize to your facebook audience setting up a goal is our first item. </p>
-          </div>
 
-        </div>
-      </div> 
-    </section> 
-   
+  					<div class="col-md-4 mb-4">
+  						<span class="fa-stack fa-3x mb-2">
+  							<i class="fas fa-circle fa-stack-2x text-primary"></i>
+  							<i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+  						</span>
+  						<h6 class="section-heading text-uppercase">Graphic Design</h6>
+  						<p>Need that flyer? brochure? or billboard? We provide graphic design services of all shapes and sizes.
+  						</div>
+
+  						<div class="col-md-4 mb-4">
+  							<span class="fa-stack fa-3x mb-2">
+  								<i class="fas fa-circle fa-stack-2x text-primary"></i>
+  								<i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+  							</span>
+  							<h6 class="section-heading text-uppercase">Video Production</h6>
+  							<p> Our strong suite. We write, produce, direct, edit and publish your videos directly to your choice of avenues.</p>
+  						</div>
+
+  						<div class="col-md-4 mb-4">
+  							<span class="fa-stack fa-3x mb-2">
+  								<i class="fas fa-circle fa-stack-2x text-primary"></i>
+  								<i class="fas fa-ad fa-stack-1x fa-inverse"></i>
+  							</span>
+  							<h6 class="section-heading text-uppercase">PPC Ads</h6>
+  							<p>Get #1 on Google or advertize to your facebook audience setting up a goal is our first item. </p>
+  						</div>
+  					</div>
+  				</div> 
+  			</section> 
+
 
 
 
